# ot-harjoitustyo

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  luokkakaavio.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
harjoitustyo/: .README.md.swp  README.md  pyproject.toml  tasks.py
harjoitustyo/dokumentaatio/: changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
harjoitustyo/src/: main.py
harjoitustyo/src/synth/: oscillators.py  playback.py  synthengine.py  synthesizer.py
harjoitustyo/src/ui/: ui.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py  muistiinpano.txt
src/: main.py
src/synth/: filter.py  frequencies.py  oscillators.py  playback.py  synthengine.py  synthesizer.py  voice.py
src/tests/: oscillators_test.py  synthengine_test.py  voice_test.py
src/ui/: gui.py  keypresses.py  parameters.py  ui.py
