[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = "Subtractive synthesizer"
authors = ["Rudolf Heiskanen <r.sananjalka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.3.0"
numpy = "^1.24.2"
thorpy = "^1.8.1"
invoke = "^2.0.0"
simpleaudio = "^1.0.4"
sounddevice = "^0.4.6"
pygame-gui = "^0.6.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
